StandaloneGenerator class and generator algorithm using List<String> for word list.